tests/bigint/invalid01.js
type InvalidDecimal = 1.0n; // error
